# TCGE

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SUMMARY.md  build.rs  testing-gitbook.md
.github/workflows/: build-and-test.yml
assets/fonts/ascii/: Hack-Regular.ttf.sdf.txt  hack.fnt  hack.hiero
assets/fonts/hack/: Hack-Regular.json  hack.fnt
assets/fonts/material-design-icons/: mdi.fnt  mdi.json  mdi.ttf.sdf.txt
assets/fonts/md-icons/: md-icons.fnt  md-icons.hiero
assets/fonts/roboto/: Roboto-Bold.json  Roboto-BoldItalic.json  Roboto-Italic.json  Roboto-Regular.json  roboto-bold-italic.hiero  roboto-bold.fnt  roboto-bold.hiero  roboto-bolditalic.fnt  roboto-italic.fnt  roboto-italic.hiero  roboto.fnt  roboto.hiero
assets/shaders/: grid.frag  noise.frag  sdf-text.frag  sdf-text.vert  sky.frag  triangle.frag  triangle.vert
config/: engine.toml  test-scene.toml
docs/: architecture.md  cdml.ebnf
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: gameloop.rs  lib.rs  resources.rs  router.rs
src/blocks/: coords.rs  mod.rs  storage.rs  universe.rs
src/client/: blocks.rs  cmd_opts.rs  context.rs  freecam.rs  geometry.rs  glfw_context.rs  mod.rs  render_gl.rs  scene.rs  settings.rs
src/client/blocks/: mesher.rs  mod.rs  raycast.rs  render.rs  static_bakery.rs
src/client/render/: ascii_text.rs  crosshair.rs  geometry.rs  grid.rs  materials.rs  mod.rs  text.rs  utility.rs
src/router/: comp.rs  context.rs  event.rs  lens.rs  mod.rs  node.rs
src/server/: mod.rs
src/util/: gameloop.rs  mod.rs  tiny_profiler.rs  utf8.rs
tcge-backbone/: Cargo.toml
tcge-backbone/src/: comps.rs  event.rs  lib.rs  nodes.rs  state.rs
tcge-blocks/: Cargo.toml
tcge-blocks/src/: blocks.rs  coords.rs  face.rs  id.rs  layers.rs  lib.rs  raycast.rs
tcge-blocks/src/block/: mod.rs  simple.rs
tcge-client/: Cargo.toml
tcge-client/src/: glfw_context.rs  main.rs
tcge-client/src/playground/: aabb.rs  crosshair.rs  freecam.rs  inventory.rs  mod.rs
tcge-client/src/playground/grid/: grid.frag  grid.vert  mod.rs
tcge-client/src/playground/sky/: mod.rs  sky.vert
tcge-client/src/playground/test_blocks/: block_bakery.rs  block_material.rs  block_model.rs  blocks.frag  blocks.vert  chunk.rs  chunk_coord.rs  chunk_mesher.rs  chunk_render.rs  chunk_storage.rs  mod.rs
tcge-client/src/render/: buffer_object.rs  camera.rs  geometry.rs  mod.rs  program_object.rs  shader_object.rs  texture_atlas.rs  texture_object.rs  vertex_array.rs
tcge-client/src/render/materials/: mod.rs
tcge-client/src/render/materials/solid_color/: mod.rs  solid-color.frag
tcge-client/src/render/text/: material.rs  mod.rs  parser.rs  renderer.rs  sdf-text.frag  sdf-text.vert
tcge-client/src/render/wireframe/: mod.rs  wireframe.frag  wireframe.vert
tcge-common/: Cargo.toml
tcge-common/src/: commandline.rs  doublebuffer.rs  gameloop.rs  lib.rs  profiler.rs
tcge-common/src/resources/: location.rs  mod.rs
tcge-common/src/resources/providers/: archive.rs  filesystem.rs  include.rs  mod.rs
tcge-opengl/: Cargo.toml  build.rs
tcge-opengl/src/: lib.rs
tcge-server/: Cargo.toml
wix/: License.rtf  main.wxs
