[package]
name = "tcge"
publish = false
license = "MIT"
version = "0.1.0"
authors = ["Lars Longor K <lalongok@gmail.com>"]
description = "Game Engine"
readme  = "README.md"
exclude = [
  ".gitignore",
  ".idea/",
  "docs/",
  "*.md",
  "*.ebnf",
]

links = "glfw3"
build = "build.rs"
edition = '2018'

[dependencies]
log = "0.4.6"
simplelog = "0.5.3"
failure = "0.1.3"
mopa = "0.2.2"
time = "*"
cgmath = "*"
clap = "~2.32.0"
rustc-hash = "1.0.1"
# machine = "0.2.0"

# debugging
# flame = "*"
# flamer = "*" # This is a macro for FLAME.

# filesystem
## zip = "0.4.2"
## rust-lzma = "0.2.1"
## notify = "4.0.3"
## filebuffer = "0.4.0"
## rust-embed = "4.3.0" # https://github.com/pyros2097/rust-embed

# graphics
gl = "*"
glfw = {version = "*"}
image = "*"
# https://crates.io/keywords/renderdoc

# user interface?
## selectors = "0.19.0"
## rusttype = "0.6.2"
## imgui = "*"

# networking
## mio = "0.6.15" # https://github.com/carllerche/mio
## ws = "0.7.6"   # https://github.com/housleyjk/ws-rs
## rcon = "0.1.0"
## quic = "0.0.3"

# procedural
## simdnoise = "*"

# modding
## https://crates.io/crates/wasmer-runtime/

[build-dependencies]
walkdir = "2.1"
git-version = "0.2.1"

# windres = "0.2.1"
# build_details = "0.1.2"


#cargo extensions?
# - https://crates.io/crates/cargo-modules
# - https://crates.io/crates/cargo-disassemble